# AutoSparse

./: .gitignore  LICENSE  README.md  autosparse_net.md  requirements.txt  taco_command.md  tmp.py
pybind11_demo/: CMakeLists.txt  mylib.h  pywrap.cpp
python/: CMakeLists.txt  Makefile  test.py  tutorial.md  tutorial.py
python/AutoSparse/: __init__.py  auto_tune.py  build.py  format.py  model.py  ops.py  schedule.py  space.py  tensor.py  tutorial.md  utils.py
python/AutoSparse/cost_model/: analysis_model.py  config.py  data_helper.py  dataset_loader.py  evaluate.py  inference_sparse_matrix.py  model.py  plot.py  test.py  tokenizer.py  train.py  utils.py  waco_net.py
python/AutoSparse/cost_model/demo/: tlp_train.py
python/codegen/: CMakeLists.txt  Makefile  backend_api.hpp  backend_api_bindings.cpp  execution_manager.hpp  sddmm_patch.py  tensor.hpp  test_backend_api.cpp  test_backend_api_sddmm.cpp  utils.hpp
python/experiments/: evaluation_gespmm.py  evaluation_gespmv.py  evaluation_mmadd.py  evaluation_plus3.py  evaluation_residule.py  evaluation_sddmm.py  evaluation_spmm.py  evaluation_spmv.py  motivation.py  motivation_search_clusters.py  motivation_times_test.py  plot.py  plot_cost_model_loss.py  thermodynamic_diagram.py
python/experiments/epyc_evaluation/: result.csv
python/experiments/epyc_evaluation/Chevron3_4x16_1/: p_searchingschedule_data.pth  q_sa_searchingschedule_data.pth  random_searching_2024_04_26_09_28_32.csv  random_searchingschedule_data.pth
python/experiments/epyc_evaluation/EX1_8x8_4/: p_searching_2024_04_26_19_29_53.csv  p_searchingschedule_data.pth  random_searchingschedule_data.pth
python/experiments/epyc_evaluation/NACA0015_16x8_9/: p_searching_2024_04_26_15_29_05.csv  random_searching_2024_04_26_14_26_55.csv
python/experiments/epyc_evaluation/Trec6_16x16_9/: p_searching_2024_04_26_16_41_13.csv  q_sa_searching_2024_04_27_22_33_15.csv  q_sa_searchingschedule_data.pth
python/experiments/epyc_evaluation/Trefethen_20000/: q_sa_searching_2024_04_27_02_35_27.csv  random_searching_2024_04_26_00_18_23.csv  random_searchingschedule_data.pth
python/experiments/epyc_evaluation/bcsstk38/: p_searching_2024_04_25_22_53_39.csv  p_searchingschedule_data.pth  q_sa_searchingschedule_data.pth  random_searchingschedule_data.pth
python/experiments/epyc_evaluation/cca/: q_sa_searching_2024_04_26_22_20_44.csv
python/experiments/epyc_evaluation/cfd1/: p_searchingschedule_data.pth  random_searching_2024_04_26_02_53_07.csv
python/experiments/epyc_evaluation/conf5_0-4x4-18/: p_searchingschedule_data.pth  (+3 more)
python/experiments/epyc_evaluation_mmadd/: bcsstk38.txt  conf5_0-4x4-18.txt  mhd4800a.txt  msc10848.txt  pf2177.txt  result.csv
python/experiments/epyc_evaluation_plus3/: result.csv
python/experiments/epyc_evaluation_sddmm/: result.csv
python/experiments/epyc_evaluation_spmm/: bcsstk38.txt  result.csv
python/experiments/epyc_evaluation_spmv/: Chevron3_4x16_1.txt  EX1_8x8_4.txt  NACA0015_16x8_9.txt  Trec6_16x16_9.txt  Trefethen_20000.txt  bcsstk38.txt  cca.txt  cfd1.txt  conf5_0-4x4-18.txt  crystk01_2x16_1.txt  mhd4800a.txt  msc10848.txt  nemspmm1_16x4_0.txt  net100.txt  net150.txt  pf2177.txt  result.csv  t2dal_a_8x4_3.txt  vanbody.txt  vibrobox_1x1_0.txt
python/experiments/motivation/: times_tests.csv
python/experiments/usages/: create_sparse_mask.py  encoder.layer.11.output.dense.weight.csr  encoder.layer.9.intermediate.dense.weight.csr  evaluation_sddmm.py  evaluation_spmm.py  puning_sparse_matrix.py
python/experiments/xeon_e5_evaluation_sddmm/: result.csv
python/experiments/xeon_e5_evaluation_spmv/: result.csv
python/experiments/xeon_evaluation/: result.csv
python/experiments/xeon_evaluation_spmm/: result.csv
python/experiments/xeon_evaluation_spmv/: result.csv
python/experiments/xeon_platinum8272cl_evaluation_mmadd/: ccaccacca.txt  conf5_0-4x4-18conf5_0-4x4-18conf5_0-4x4-18.txt  result.csv
python/experiments/xeon_platinum8272cl_evaluation_plus3/: Chevron3_4x16_1Chevron3_4x16_1Chevron3_4x16_1Chevron3_4x16_1.txt  EX1_8x8_4EX1_8x8_4EX1_8x8_4EX1_8x8_4.txt  NACA0015_16x8_9NACA0015_16x8_9NACA0015_16x8_9NACA0015_16x8_9.txt  Trec6_16x16_9Trec6_16x16_9Trec6_16x16_9Trec6_16x16_9.txt  Trefethen_20000Trefethen_20000Trefethen_20000Trefethen_20000.txt  ccaccaccacca.txt  cfd1cfd1cfd1cfd1.txt  conf5_0-4x4-18conf5_0-4x4-18conf5_0-4x4-18conf5_0-4x4-18.txt  crystk01_2x16_1crystk01_2x16_1crystk01_2x16_1crystk01_2x16_1.txt  nemspmm1_16x4_0nemspmm1_16x4_0nemspmm1_16x4_0nemspmm1_16x4_0.txt  result.csv  t2dal_a_8x4_3t2dal_a_8x4_3t2dal_a_8x4_3t2dal_a_8x4_3.txt  vanbodyvanbodyvanbodyvanbody.txt  vibrobox_1x1_0vibrobox_1x1_0vibrobox_1x1_0vibrobox_1x1_0.txt
python/experiments/xeon_platinum8272cl_evaluation_sddmm/: Chevron3_4x16_1Chevron3_4x16_1.txt  EX1_8x8_4EX1_8x8_4.txt  NACA0015_16x8_9NACA0015_16x8_9.txt  Trec6_16x16_9Trec6_16x16_9.txt  Trefethen_20000Trefethen_20000.txt  bcsstk38bcsstk38.txt  ccacca.txt  cfd1cfd1.txt  conf5_0-4x4-18conf5_0-4x4-18.txt  crystk01_2x16_1crystk01_2x16_1.txt  mhd4800amhd4800a.txt  msc10848msc10848.txt  nemspmm1_16x4_0nemspmm1_16x4_0.txt  net100net100.txt  net150net150.txt  pf2177pf2177.txt  result.csv  t2dal_a_8x4_3t2dal_a_8x4_3.txt  vanbodyvanbody.txt  vibrobox_1x1_0vibrobox_1x1_0.txt
python/experiments/xeon_platinum8272cl_evaluation_spmm/: Chevron3_4x16_1.txt  EX1_8x8_4.txt  NACA0015_16x8_9.txt  Trec6_16x16_9.txt  Trefethen_20000.txt  bcsstk38.txt  cca.txt  cfd1.txt  conf5_0-4x4-18.txt  crystk01_2x16_1.txt  mhd4800a.txt  msc10848.txt  nemspmm1_16x4_0.txt  net100.txt  net150.txt  pf2177.txt  result.csv  t2dal_a_8x4_3.txt  vanbody.txt  vibrobox_1x1_0.txt
python/experiments/xeon_platinum8272cl_evaluation_spmv/: Chevron3_4x16_1.txt  EX1_8x8_4.txt  NACA0015_16x8_9.txt  Trec6_16x16_9.txt  Trefethen_20000.txt  bcsstk38.txt  cca.txt  cfd1.txt  conf5_0-4x4-18.txt  crystk01_2x16_1.txt  mhd4800a.txt  msc10848.txt  nemspmm1_16x4_0.txt  net100.txt  net150.txt  pf2177.txt  result.csv  t2dal_a_8x4_3.txt  vanbody.txt  vibrobox_1x1_0.txt
python/test/: test_autosparse.py  test_autotuning.py  test_space.py
taco/: CMakeLists.txt
(+1084 files in other folders)
